# equity_factors

./: .gitignore  README.md  requirements.txt  tstat_comparison.csv
data-replication/: data_check.ipynb  ff3_crspCIZ.ipynb  open_ap_factors.py  openap_alignment.py  openap_monthly_factors.csv  public_sourced_factors.csv  wrds_factors.py
data-replication/cleaned_public/: AQR_aligned_BAB.csv  AQR_aligned_HML_Devil.csv  AQR_aligned_QMJ.csv  (+7 more)
factor_coverages/: appendix_factors.md  coverage_sheet.md
fzr/: README.md  individual_factor_analysis.ipynb  mypy.ini  openap_test.ipynb  pyproject.toml  replication_test.ipynb  ruff.toml
fzr/src/fzr/: __init__.py  calendar.py  cli.py  etl.py  factors_core.py  store.py  types.py  utils.py
fzr/src/fzr/plugins/: IPO.py  __init__.py  acc_2x3.py  adm.py  cashdebt_2x3.py  cfp_ia.py  chempia.py  chinv.py  chtx.py  convind_2x3.py  currat_2x3.py  depr_2x3.py  divi.py  divo.py  dolvol.py  ff93_shared.py  ff_shared.py  hml_ff93.py  ia_shared.py  lev_2x3.py  liquidity_shared.py  mom36m.py  mom6m.py  mve_ia.py  pchcurrat_2x3.py  pchdepr_2x3.py  pchgm_pchsale_2x3.py  pchquick_2x3.py  pchsaleinv_2x3.py  pps.py  quick_2x3.py  rdm.py  rds.py  salecash_2x3.py  saleinv_2x3.py  salerec_2x3.py  sgr.py  smb_ff93.py  std_dolvol.py  std_turn.py  (+1 more)
fzr/src/fzr/templates/queries/crsp/: ccm_linked_funda.sql.j2  ccm_linked_fundq.sql.j2  msf_v2.sql.j2
fzr/tests/: conftest.py  test_breakpoints.py  test_calendar.py  test_ccm_join.py  test_etl.py  test_factors_core.py  test_store.py
model-replication/: significant_port.ipynb
replication-package/: readme.txt
(+36 files in other folders)
