[project]
name = "fzr"
version = "0.1.0"
description = "Factor Zoo Replication ETL"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas==2.2.2",
    "sqlalchemy==2.0.31",
    "psycopg2-binary>=2.9",
    "pyarrow>=15.0",
    "jinja2>=3.1",
    "wrds>=3.3.0",
]

[project.scripts]
fzr = "fzr.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
filterwarnings = [
    "ignore:datetime\\.datetime\\.utcfromtimestamp\\(\\) is deprecated:DeprecationWarning:dateutil.tz.tz",
]
